# s1downloader

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  environment.yml  pyproject.poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml  release.yml
app/: __init__.py  aoi.py  auth.py  config.py  download_service.py  logging_setup.py  main.py  manifest.py  models.py  plot_service.py  search_service.py
docs/: architecture.md  cli-usage.md  faq.md  review-report.md  tutorial.md
docs/man/: s1downloader.1.md
s1downloader/: __init__.py  aoi.py  auth.py  config.py  download_service.py  logging_setup.py  main.py  manifest.py  models.py  plot_service.py  search_service.py
tests/: test_aoi.py  test_auth.py  test_compat_imports.py  test_download_service.py  test_integration_download.py  test_main_args.py  test_main_download_flow.py  test_main_search_flow.py  test_manifest.py  test_parallel_download.py  test_plot_service.py  test_search_service.py
